test/Fail/Issue2819.err
Issue2819.agda:16.16-20: error: [UnequalTerms]
The terms
  true
and
  false
are not equal at type Bool
when checking that the expression refl has type d true ≡ d false
